unified_tests/literals/string_interpolation_with_empty_expression/expect/build.text.stderr
lib.copp:2:20: error: expected expression
      return "hello {}"
                     ^
